# finance-tracker-tauri

./: .env.example  .gitignore  Makefile  README.md  index.html  package.json  setup.ps1  setup.sh  tsconfig.app.json  vite.config.ts
r2-worker/: README.md  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.toml
r2-worker/src/: index.ts
scripts/: setup-linux.sh  setup-windows.ps1  setup.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: android.json  default.json
src-tauri/src/: lib.rs
src/components/: AddRecordDialog.tsx  AdminPanel.tsx  AppHeader.tsx  Auth.tsx  BatchImportDialog.tsx  CategoryDialog.tsx  ChartsView.tsx  DatabaseSettingsDialog.tsx  FileDownload.tsx  FileUpload.tsx  RecordsList.tsx  SummaryCards.tsx
src/components/ui/: chart.tsx
src/lib/: client-db.ts  csv-utils.ts  db.ts  file-storage.ts  i18n.ts  r2-upload.ts  store.ts  supabase-db.ts  supabase.ts  sync-utils.ts  utils.ts
